--- a/dashboard.html
+++ b/dashboard.html
@@ -13,31 +13,50 @@
     h1 {
       color: #0275d8;
     }
-    p {
-      font-size: 18px;
+    input {
+      padding: 10px;
+      width: 250px;
+      margin-top: 15px;
+      margin-bottom: 15px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
     }
     button {
       padding: 10px 20px;
-      background-color: #d9534f;
+      background-color: #0275d8;
       color: white;
       border: none;
       border-radius: 5px;
       cursor: pointer;
-      margin-top: 30px;
     }
     button:hover {
+      background-color: #025aa5;
+    }
+    .logout {
+      background-color: #d9534f;
+      margin-top: 30px;
+    }
+    .logout:hover {
       background-color: #c9302c;
     }
   </style>
 </head>
 <body>
   <h1>Welcome to WaLastSeen Dashboard!</h1>
-  <p>This is your private dashboard. In future steps, we will show “last seen” tracking features here.</p>
-  <button onclick="logout()">Logout</button>
+  <p>Enter a WhatsApp number to track (for learning/testing):</p>
+
+  <input type="text" id="whatsappNumber" placeholder="+923001234567" />
+  <br>
+  <button onclick="saveNumber()">Track Number</button>
+
+  <p id="statusMessage"></p>
+
+  <button class="logout" onclick="logout()">Logout</button>
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
     import { getAuth, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js";
+    import { getFirestore, doc, setDoc } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyB_8jnP9Yq5LhYnqFMwJ1G1dUjRqimJklk",
@@ -50,10 +69,11 @@
 
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
+    const db = getFirestore(app);
 
     onAuthStateChanged(auth, user => {
       if (!user) {
-        window.location.href = "index.html"; // Redirect to login if not logged in
+        window.location.href = "index.html";
       }
     });
 
@@ -62,6 +82,28 @@
         alert("Logged out!");
         window.location.href = "index.html";
       });
+    };
+
+    window.saveNumber = async function () {
+      const number = document.getElementById("whatsappNumber").value.trim();
+      const user = auth.currentUser;
+
+      if (!number.startsWith("+") || number.length < 10) {
+        document.getElementById("statusMessage").innerText = "❌ Please enter a valid WhatsApp number with country code.";
+        return;
+      }
+
+      try {
+        await setDoc(doc(db, "trackedNumbers", user.uid), {
+          number: number,
+          userEmail: user.email,
+          addedAt: new Date().toISOString()
+        });
+
+        document.getElementById("statusMessage").innerText = "✅ Number saved successfully!";
+      } catch (error) {
+        document.getElementById("statusMessage").innerText = "❌ Failed to save number: " + error.message;
+      }
     };
   </script>
 </body>
