--- a/dashboard.html
+++ b/dashboard.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WaLastSeen - Dashboard</title>
   <style>
     body {
@@ -9,8 +10,8 @@
       background-color: #f6f8fa;
       display: flex;
       flex-direction: column;
-      justify-content: center;
       align-items: center;
+      justify-content: center;
       height: 100vh;
       margin: 0;
     }
@@ -23,12 +24,13 @@
       width: 300px;
     }
     h2 {
-      margin-bottom: 10px;
       text-align: center;
     }
-    .status {
-      margin-top: 10px;
-      font-size: 18px;
+    .contact {
+      margin: 10px 0;
+    }
+    .contact span {
+      font-weight: bold;
     }
     .online {
       color: green;
@@ -37,28 +39,29 @@
       color: red;
     }
   </style>
-  
-  <!-- Firebase SDK -->
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
 </head>
 <body>
   <h2>Welcome to WaLastSeen</h2>
-  <div class="status-box" id="contact1-status">
-    <h3>Contact 1: +19048464390</h3>
-    <div id="contact1-status-text" class="status">Loading...</div>
+
+  <div class="status-box">
+    <div class="contact">
+      <span>Contact 1:</span> +19048464390
+      <div id="status1">Loading...</div>
+    </div>
   </div>
-  <div class="status-box" id="contact2-status">
-    <h3>Contact 2: +923440070803</h3>
-    <div id="contact2-status-text" class="status">Loading...</div>
+
+  <div class="status-box">
+    <div class="contact">
+      <span>Contact 2:</span> +923440070803
+      <div id="status2">Loading...</div>
+    </div>
   </div>
-  
+
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
     import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js";
-    import { getAuth } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js";
 
+    // Your Firebase configuration
     const firebaseConfig = {
       apiKey: "AIzaSyB_8jnP9Yq5LhYnqFMwJ1G1dUjRqimJklk",
       authDomain: "walastseen.firebaseapp.com",
@@ -68,35 +71,32 @@
       appId: "1:80496023280:web:3bea7627c6dcfcece59435"
     };
 
+    // Initialize Firebase
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
-    const auth = getAuth(app);
 
-    // Check user authentication
-    auth.onAuthStateChanged(user => {
-      if (!user) {
-        window.location.href = "index.html"; // Redirect to login if not authenticated
-      }
-    });
-
-    // Function to fetch contact status from Firestore
+    // Function to fetch and display contact status from Firestore
     async function fetchStatus(contactId, statusElementId) {
-      const docRef = doc(db, "contactsStatus", contactId);
-      const docSnap = await getDoc(docRef);
+      try {
+        const docRef = doc(db, "contactsStatus", contactId);
+        const docSnap = await getDoc(docRef);
 
-      if (docSnap.exists()) {
-        const status = docSnap.data().status;
-        const statusElement = document.getElementById(statusElementId);
-        statusElement.innerHTML = `Status: <span class="${status.toLowerCase()}">${status}</span>`;
-      } else {
-        const statusElement = document.getElementById(statusElementId);
-        statusElement.innerHTML = "No data available.";
+        if (docSnap.exists()) {
+          const status = docSnap.data().status;
+          const statusElement = document.getElementById(statusElementId);
+          statusElement.innerHTML = `Status: <span class="${status.toLowerCase()}">${status}</span>`;
+        } else {
+          const statusElement = document.getElementById(statusElementId);
+          statusElement.innerHTML = "No data available.";
+        }
+      } catch (error) {
+        console.error("Error fetching status:", error);
       }
     }
 
     // Fetch status for both contacts
-    fetchStatus("+19048464390", "contact1-status-text");
-    fetchStatus("+923440070803", "contact2-status-text");
+    fetchStatus("+19048464390", "status1");
+    fetchStatus("+923440070803", "status2");
   </script>
 </body>
 </html>
